--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "bull-board": "^2.1.3",
     "dotenv": "^16.4.7",
     "ioredis": "^5.6.1",
+    "lodash.chunk": "^4.2.0",
     "moment": "^2.30.1",
+    "p-limit": "^7.2.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "uuid": "^11.1.0"
